# rdesktop

./: .cvsignore  .gitignore  .travis.yml  ANNOUNCE  Makefile  Makefile.in  README  README.md  asn.c  asn.h  bitmap.c  cache.c  channels.c  client.c  cliprdr.c  config.guess  configure  configure.ac  constants.h  cssp.c  ctrl.c  disk.c  disk.h  dvc.c  ewmhints.c  genauthors  includes.h  indent-all.sh  ipc.c  iso.c  iso.h  licence.c  lspci.c  mcs.c  mcs.h  misc.c  misc.h  mppc.c  orders.c  orders.h  (+52 more)
.github/ISSUE_TEMPLATE/: bug-report.md  feature-suggestion.md  getting-help.md
crypto/: README  arith.c  arith.h  bn.h  bn_add.c  bn_asm.c  bn_ctx.c  bn_div.c  bn_exp.c  bn_lcl.h  bn_lib.c  bn_mul.c  bn_shift.c  bn_sqr.c  conf.h  md5.h  md5_dgst.c  md5_locl.h  rc4.h  rc4_enc.c  rc4_locl.h  rc4_skey.c  sha.h  sha1dgst.c  sha_locl.h
doc/: AUTHORS  ChangeLog  HACKING  TODO  ctrl.txt  exit_codes.txt  ipv6.txt  keymapping.txt  licensing.txt  makerelease.txt  patches.txt  rdesktop.1  rdpsnd-rec.txt  rdpsnd.txt  redirection.txt  seamlessrdp-channel.txt
keymaps/: README  ar  be  bg  br  cf  common  convert-map  cs  da  de  de-ch  dk  dv  el  en  en-us-intl  es  et  fi  fo  fr  fr-bepo  fr-ca  ga  gb  gd  he  hi  hr  hu  is  it  ja  ka  kk  ko  la  lt  lv  (+27 more)
tests/: Makefile  README.md  asn_test.c  bitmap_mock.c  brushtest.c  brushtestMakefile  cache_mock.c  channels_mock.c  cliprdr_mock.c  ctrl_mock.c  disk_mock.c  dvc_mock.c  ewmh_mock.c  iso_mock.c  licence_mock.c  lspci_mock.c  mcs_mock.c  mcs_test.c  mppc_mock.c  notepadbehindwordpad.c  orders_mock.c  parallel_mock.c  parse_geometry_test.c  printer_mock.c  pstcache_mock.c  rdesktop_mock.c  rdp5_mock.c  rdp_mock.c  rdp_test.c  rdpdr_mock.c  rdpedisp_mock.c  resize_test.c  seamless_mock.c  secure_mock.c  serial_mock.c  ssl_mock.c  tcp_mock.c  ui_mock.c  utils_mock.c  utils_test.c  (+5 more)
uiports/: makefile_nanox  makefile_qt  makefile_qte  makefile_svga  makefile_xxx  nanoxreadme.txt  nanoxwin.c  qterdesktopbuild.sh  qtereadme.txt  qtewin.cpp  qtewin.cpp~  qtewin.h  qtrdesktopbuild.sh  qtreadme.txt  qtwin.cpp  qtwin.h  readme.txt  sharpbuild.sh  svgardesktopbuild.sh  svgareadme.txt  svgawin.c  xxxrdesktopbuild.sh  xxxwin.c
vnc/: vnc.c  vnc.h  x11stubs.h
